Fix donation information alignmant for RTL & LTR view

--- a/assets/scss/admin/payment-history.scss
+++ b/assets/scss/admin/payment-history.scss
@@ -262,6 +262,10 @@ Responsiveness
   margin-right: 10px;
 }
 
+#give-donation-overview th {
+  text-align: initial;
+}
+
 #give-donation-overview .give-select-chosen {
   width: 196px;
 }
